# Scrapling

./: .dockerignore  .pre-commit-config.yaml  Dockerfile.backend  Dockerfile.frontend  README.md  docker-compose.yml  nginx.conf
.kiro/steering/: product.md  tech.md  (+1 more)
backend/: .env.example  README.md  pyproject.toml  pytest.ini
backend/.prj_back/: API_ENDPOINTS_PHASE_5_6.md  IMPLEMENTATION_REPORT.md  PHASE_1_2_SUMMARY.md  PHASE_3_4_SUMMARY.md  PHASE_5_6_COMPLETION_REPORT.md  PHASE_5_6_IMPLEMENTATION.md  PHASE_5_6_QUICK_REFERENCE.md  PHASE_7_8_COMPLETION_SUMMARY.md  PHASE_7_8_IMPLEMENTATION.md  PHASE_7_8_QUICK_REFERENCE.md  QUICK_START.md  TASKS_STATUS.md  TASK_15_1_COMPLETION.md  TASK_15_2_COMPLETION.md  TASK_15_3_COMPLETION.md  TASK_22_1_SUMMARY.md  task_19_1_summary.md
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py
backend/app/: __init__.py  celery_app.py  config.py  exceptions.py  logging_config.py  main.py  openapi.py  websocket_manager.py
backend/app/db/: __init__.py  database.py
backend/app/middleware/: __init__.py  api_key_auth.py  auth.py  error_handler.py  logging.py  rate_limit.py
backend/app/models/: __init__.py  api_key.py  base.py  header.py  proxy.py  result.py  session.py  task.py  task_log.py  user.py  webhook.py
backend/app/routes/: api_keys.py  auth.py  dashboard.py  proxies.py  results.py  selectors.py  task_execution.py  tasks.py  webhooks.py  websocket.py
backend/app/schemas/: error.py  result.py  session.py  task.py  user.py
backend/app/services/: api_key.py  auth.py  dashboard.py  export_service.py  header.py  progress.py  proxy.py  result_service.py  selector_validator.py  task.py  webhook.py
backend/app/tasks/: __init__.py  scrapling_tasks.py
backend/tests/: conftest.py  test_api_keys.py  test_auth.py  test_dashboard.py  test_export_formats.py  test_header_crud.py  test_proxy_rotation.py  test_proxy_validation.py  test_result_pagination.py  test_selector_validation.py  test_task_list_filtering.py  test_task_validation.py  test_webhooks.py  test_websocket_progress_messages.py
frontend/: .eslintrc.json  README.md  index.html  package-lock.json  package.json
(+30 files in other folders)
